--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*@apply flex flex-col items-center;*/
+}
+
+#root {
+  /*@apply w-full max-w-screen-2xl;*/
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+input {
+  /*@apply p-4 outline-none border border-gray-300 my-1;*/
 }
